# mari-gestor

./: .gitignore  bun.lockb  eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: bill-dialog.tsx  card-bill.tsx  card-resume.tsx  card-salary.tsx  menu-bill-dialog.tsx  salary-dialog.tsx
src/components/ui/: button.tsx  dialog.tsx  input.tsx  separator.tsx  table.tsx
src/errors/: service-error.ts
src/screens/Home/: index.tsx  useHome.tsx
src/services/: bill-service.ts  salary-service.ts
src/types/: bill.ts  salary.ts  service-response.ts
